﻿1.3.0
-----
1. Add option to control startup-state; visible, hidden, or remembered from
   previous run.

1.2.1
-----
1. Only use old Qt DBUS type annotations for Qt less than 4.8.2
2. Use "(c)" instead of "©", as "©" seems to mess up Qt translations.
3. Fix tagtype and URL handler detection.

1.2.0
-----
 1. Add support for opus audio format - AudioCD encoding, transcoding, HTTP
    server, etc.
 2. Add support for user-installable stream providers. See README for file
    format.
 3. Add config page to control which stream categories are enabled, to import
    new categories, and to remove imported categories.
 4. Request IceCast stream list in compressed format.
 5. Add ShoutCast search.
 6. For some stream categories (digitally imported, jazzradio, rockradio, sky,
    somaFm, and some user categories) add category name to stream name when it
    is saved in favourites, or added to playqueue.
 7. Support composer tag - group albums via composer, edit tag, rename files
    using tag, and use field for dynamic playlists.
 8. Place HTTP stream URL into connections page, as URL could be different per
    connection.
 9. Use QListWidget in Qt preferences dialog, so that keyboard navigation can be
    used.
10. Add ability to 'filter search' stream categories.
11. Add option to prevent system from suspending whilst playing (Linux only).
12. If playqueue is cleared when dynamizer is running, then also stop dynamizer.
13. Create a new SizeGrip class, so that we can force the size-grip on the main
    window to have the same height as toolbuttons - this makes it align to the
    bottom.
14. Place a 0-pixel wide 'size widget' at the bottom of each view, to attempt to
    ensure consistent sizes between views.
15. Make playqueue search consistent with view search - ie. only show search on
    activating 'Search Play Queue', do not toggle.
16. Initial MacOS port - thanks to Ian Scott
17. Podcast support.
18. Add config page to determine list of online providers.